added project files

--- a/autism-chatbot/frontend/index.html
+++ b/autism-chatbot/frontend/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <title>AI Autism Screening</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <div class="header">Autism Screening Assistant</div>
-
+    <div>
+        <h1>Made By Piyush Khatwa</h1>
+    </div>
     <div class="chat-container">
         <div id="chat-box" class="chat-box"></div>
 
@@ -19,4 +23,5 @@
 
     <script src="chatbot.js"></script>
 </body>
+
 </html>
