Added footer - Made By Piyush Khatwa

--- a/autism-chatbot/frontend/index.html
+++ b/autism-chatbot/frontend/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">Autism Screening Assistant</div>
     <div>
-        <h1>Made By Piyush Khatwa</h1>
+        <p>✨ Made with ❤️ by <span>Piyush Khatwa</span> ✨</p>
     </div>
     <div class="chat-container">
         <div id="chat-box" class="chat-box"></div>
