Added footer - Made By Piyush Khatwa

--- a/autism-chatbot/frontend/index.html
+++ b/autism-chatbot/frontend/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="header">Autism Screening Assistant</div>
-    <div>
-        <p>✨ Made with ❤️ by <span>Piyush Khatwa</span> ✨</p>
-    </div>
+    <footer class="pk-badge"><p>🚀 Made By <strong>Piyush Khatwa</strong></p>
+</footer>
+
     <div class="chat-container">
         <div id="chat-box" class="chat-box"></div>
 
