Added footer - Made By Piyush Khatwa

--- a/autism-chatbot/frontend/index.html
+++ b/autism-chatbot/frontend/index.html
@@ -9,8 +9,11 @@
 
 <body>
     <div class="header">Autism Screening Assistant</div>
-    <footer class="pk-badge"><p>🚀 Made By <strong>Piyush Khatwa</strong></p>
+    <!-- Footer -->
+<footer class="pk-footer">
+    <p>✨ Made with ❤️ by <span>Piyush Khatwa</span> ✨</p>
 </footer>
+
 
     <div class="chat-container">
         <div id="chat-box" class="chat-box"></div>
